--- a/index.html
+++ b/index.html
@@ -58,23 +58,31 @@ section{
         </section>
 
         <section>
-            <a href="assignment1_0.html">Assignment 1</a><br>
+            <a href="Assignment_1/assignment1_0.html">Assignment 1</a><br>
         </section>
 
         <section>
-            <a href="assignment2_0.html">Assignment 2</a><br>
+            <a href="Assignment_2/assignment2_0.html">Assignment 2</a><br>
         </section>
 
         <section>
-            <a href="assignment3_0.html">Assignment 3</a><br>
+            <a href="Assignment_3/assignment3_0.html">Assignment 3</a><br>
         </section>
 
         <section>
-            <a href="assignment4_0.html">Assignment 4</a><br>
+            <a href="Assignment_4/assignment4_0.html">Assignment 4</a><br>
+        </section>
+
+        
+            <a href="Assignment_5/assignment5_0.html">Assignment 2</a><br>
         </section>
 
         <section>
-            <a href="assignment5_0.html">Assignment 5</a><br>
+            <a href="Assignment_6/assignment6_0.html">Assignment 3</a><br>
+        </section>
+
+        <section>
+            <a href="Assignment_7/assignment7_0.html">Assignment 4</a><br>
         </section>
     </div>
     
